--- a/consulting.html
+++ b/consulting.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Executive Protection — Simo Security</title>
-  <meta name="description" content="Executive protection and close protection services in NYC."/>
+  <title>Consulting — Simo Security</title>
+  <meta name="description" content="Security consulting, risk assessment and operational planning in NYC."/>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -44,58 +44,59 @@
     </div>
   </header>
 
+  <!-- PAGE -->
   <section class="section">
     <div class="container">
-      <h1 class="page-title">Executive Protection</h1>
+      <h1 class="page-title">Consulting</h1>
       <p class="page-sub">
-        Discreet, professional close protection designed for NYC movement—arrivals, venues, and high-profile environments.
+        Clear recommendations, cleaner operations, fewer incidents. Consulting for venues, events, and corporate needs across NYC.
       </p>
 
       <div class="grid">
         <div class="card">
-          <h3>Close Protection (EP)</h3>
-          <p>Low-profile or overt coverage depending on the environment, client preference, and security posture.</p>
+          <h3>Risk Assessment</h3>
+          <p>Identify vulnerabilities and threats, then deliver practical mitigation steps tailored to your environment.</p>
           <div class="badges">
-            <span class="badge">Discreet</span>
-            <span class="badge">Overt</span>
-            <span class="badge">Client-First</span>
+            <span class="badge">Assessment</span>
+            <span class="badge">Mitigation</span>
+            <span class="badge">Reporting</span>
           </div>
         </div>
 
         <div class="card">
-          <h3>Advance & Route Planning</h3>
-          <p>Pre-planning, venue coordination, arrival control, and contingency routes for safer movement.</p>
+          <h3>Operational Plans & SOPs</h3>
+          <p>Standard operating procedures, escalation paths, entry control workflows, and incident documentation.</p>
           <div class="badges">
-            <span class="badge">Advance</span>
-            <span class="badge">Routes</span>
-            <span class="badge">Coordination</span>
+            <span class="badge">SOPs</span>
+            <span class="badge">Escalation</span>
+            <span class="badge">Incident Flow</span>
           </div>
         </div>
 
         <div class="card">
-          <h3>Arrivals & Departures</h3>
-          <p>Controlled transitions from vehicle to venue, secure entry paths, and crowd management support.</p>
+          <h3>Staffing Strategy</h3>
+          <p>Coverage planning based on layout, crowd profile, hours, and risk level—without overspending.</p>
           <div class="badges">
-            <span class="badge">Transitions</span>
-            <span class="badge">Perimeter</span>
-            <span class="badge">VIP Entry</span>
-          </div>
-        </div>
-
-        <div class="card">
-          <h3>Travel Support</h3>
-          <p>Multi-stop itineraries, meeting coordination, and security presence throughout the schedule.</p>
-          <div class="badges">
-            <span class="badge">Itinerary</span>
-            <span class="badge">Scheduling</span>
+            <span class="badge">Staffing</span>
             <span class="badge">Coverage</span>
+            <span class="badge">Venue Flow</span>
+          </div>
+        </div>
+
+        <div class="card">
+          <h3>Training Support</h3>
+          <p>Communication standards, de-escalation, professional presence, and reporting routines for teams.</p>
+          <div class="badges">
+            <span class="badge">Training</span>
+            <span class="badge">De-escalation</span>
+            <span class="badge">Protocols</span>
           </div>
         </div>
       </div>
 
-      <div style="margin-top:18px">
-        <a class="btn primary" href="contact.html">Request Confidential Quote</a>
-        <a class="btn" style="margin-left:10px" href="tel:+12013123509">Call (201) 312-3509</a>
+      <div style="margin-top:18px; display:flex; gap:10px; flex-wrap:wrap;">
+        <a class="btn primary" href="contact.html">Request Consultation</a>
+        <a class="btn" href="mailto:athierasimo@gmail.com">Email: athierasimo@gmail.com</a>
       </div>
     </div>
   </section>
