--- a/services.html
+++ b/services.html
@@ -67,6 +67,28 @@
       <div style="margin-top:18px">
         <a class="btn primary" href="contact.html">Request Quote</a>
       </div>
+      <section class="lead" id="request-quote">
+  <div class="lead-card">
+    <div class="lead-left">
+      <h2>Get a Quote</h2>
+      <p>Tell us what you need and we’ll respond with the best coverage option for your location and timeframe.</p>
+
+      <div class="lead-badges">
+        <span class="badge">NYC Metro</span>
+        <span class="badge">Fast Deployment</span>
+        <span class="badge">Professional Staffing</span>
+      </div>
+    </div>
+
+    <div class="lead-right">
+      <a class="btn" href="https://wa.me/19297123126?text=Hi%20Simo%20Security%2C%20I%27d%20like%20to%20request%20a%20quote."
+   target="_blank" rel="noopener">
+  Message on WhatsApp
+</a>
+      <p class="tiny-note">Or email: <a href="mailto:athierasimo@gmail.com">athierasimo@gmail.com</a></p>
+    </div>
+  </div>
+</section>
     </div>
   </section>
 
